number heading read annual, fix past faire button spacing

--- a/wp-content/themes/makerfaire/less/makerfaire-map.less
+++ b/wp-content/themes/makerfaire/less/makerfaire-map.less
@@ -221,11 +221,15 @@
 	}
 }
 
+.VuePagination {
+	margin-bottom: -60px;
+}
+
 #past-faires-btn {
 	float: right;
-	margin-top: -60px;
 	position: relative;
 	z-index: 999;
+	margin-bottom: 30px;
    @media all and (max-width: 767px) {
 		text-align: center;
 		float: none;
